Closed Bug 1224508 Opened 10 years ago Closed 10 years ago

[PackagedAppService] The resource callback key (URL path) shouldn't contain URI reference.

Categories

(Core :: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: hchang, Assigned: hchang)

References

Details

Attachments

(1 file)

See Also: → 1218739
Assignee: nobody → hchang
Comment on attachment 8687120 [details] [diff] [review] 0001-Bug-1224508-Use-URI-path-without-reference-as-the-ca.patch Hi Valentin, The patch is to use the URI path with no ref as the callback key. A test case is also added. Could you please review this patch? Thanks!
Attachment #8687120 - Flags: review?(valentin.gosu)
Comment on attachment 8687120 [details] [diff] [review] 0001-Bug-1224508-Use-URI-path-without-reference-as-the-ca.patch Review of attachment 8687120 [details] [diff] [review]: ----------------------------------------------------------------- Looks good. r=me
Attachment #8687120 - Flags: review?(valentin.gosu) → review+
Thanks you Valentin! (In reply to Valentin Gosu [:valentin] from comment #5) > Comment on attachment 8687120 [details] [diff] [review] > 0001-Bug-1224508-Use-URI-path-without-reference-as-the-ca.patch > > Review of attachment 8687120 [details] [diff] [review]: > ----------------------------------------------------------------- > > Looks good. r=me
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: