Bug 1224508 - Use URI path without reference as the callback key. r=valentin.